--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "element-plus": "^2.9.9",
     "js-cookie": "^3.0.5",
     "pinia": "^2.1.7",
+    "stripe": "^18.1.0",
     "vue": "^3.3.11",
     "vue-router": "^4.2.5"
   },
