--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "vite --mode development",
     "prod": "vite --mode production",
     "test": "vite --mode test",
+    "build": "vite build", 
     "build:dev": "vue-tsc && vite build --mode development",
     "build:prod": " vue-tsc && vite build --mode production",
     "build:test": "vue-tsc && vite build --mode test",
