--- a/netlify.toml
+++ b/netlify.toml
@@ -6,3 +6,8 @@
 [dev]
   functions = "netlify/functions"
   publish = "dist"
+  
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
