--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite --mode development",
     "prod": "vite --mode production",
     "test": "vite --mode test",
-    "build": "vite build", 
+    "build": "vite build",
     "build:dev": "vue-tsc && vite build --mode development",
     "build:prod": " vue-tsc && vite build --mode production",
     "build:test": "vue-tsc && vite build --mode test",
@@ -16,6 +16,7 @@
   "dependencies": {
     "@ant-design/icons-vue": "^7.0.1",
     "@babel/types": "^7.23.6",
+    "@emailjs/browser": "^4.4.1",
     "@vueuse/core": "^10.7.0",
     "@vueuse/motion": "^3.0.3",
     "ant-design-vue": "^4.2.3",
